<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/empty_tall_divider"
    android:showDividers="middle"
    android:padding="10dp"
    tools:context=".Interfaces.IngestaAlimenticia.DescriptionIngestaActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTNBackReporteShow"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="#FF0000"
            app:cornerRadius="100dp"
            app:icon="@drawable/icono_atras"
            app:iconTint="#FF0000" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTNModifyEditIngesta"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificar"
            app:cornerRadius="100dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTNRechargeDataEditIngesta"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            app:icon="@drawable/icono_restore"
            app:iconTint="#FF3D00" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fecha_registro" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtvFechaRegistroReporteShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="yyyy-dd-xx aa-tt-dd"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAlimentoEditIngesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/alimento"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCategoriaAlimentoEditIngesta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/categoria_de_alimento"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILPorcionEditIngesta"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icono_pie"
            app:boxBackgroundColor="@android:color/transparent"
            app:suffixText="gr">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPorcionEditIngesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/porcion"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILHoraConsumoEditIngesta"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icono_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtHoraConsumoEditIngesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:maxLength="5"
                android:hint="@string/hora_consumo"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="bottom">



        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTNDeleteReporteShow"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:cornerRadius="100dp"
            android:textColor="#FF0000"
            app:iconTint="#FF0000"
            android:visibility="invisible"
            app:icon="@drawable/icono_eliminar" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/BTNPrintReporteShow"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/guardar"
            app:cornerRadius="100dp"
            app:icon="@drawable/icono_add"
            app:iconGravity="start" />



    </LinearLayout>
</LinearLayout>